# AahAI

./: .gitignore  11.py  Cargo.toml  README.md  deploy_direction_cls.py  flake.nix  get_operator_class.py  ocr_det_black.py  operators_det_test.py  paddleocr.py  skill_ready_cls_test.py  train.py  图片处理.py
MapOperatorsDeploy/: DrawBox.py  README.md  VideoToPng.py  blockPosition.py  createLabel.py
MapOperatorsDeploy/MapOperators/: MapOperators.yaml
MapOperatorsDeploy/test/: map_data.csv
ModelFormatConversion/: formant_conversion.py  testONNXmap.py  testONNXready.py
map-operator-deploy/: README.md
model/: 11.py  checkModel.py  ocr_det_box.py  ocr_rec.py  operators_det_test.py  skill_ready_cls_test.py  try.py  加载模型结构.py  图片处理.py
model/xb-yolo/: .gitignore  download_spines.py  draw_box.py  generate_dataset.py  justfile  main.py  spine_to_gif.py
model/yolo/: output.txt  setData.py  setLabels.py  setName.py  testTorch.py
model/yolo/table/: image_data.csv
notes/: direction的框.md
src/: level.rs  lib.rs  main.rs  rten.rs
src/ocr/: mod.rs  text_detection.rs
src/types/: mod.rs
yolo/: README.md  createHistogramData.py  createIntegrate.py  createSingleData.py  mergeData.py  setData.py  setLabels.py
yolo/table/: image_data_unique.csv
