[package]
name = "aah-ai"
version = "0.1.0"
edition = "2021"

[dependencies]

image = "0.25.1"
tract-core = "0.21.5"
tract-onnx = "0.21.5"
uuid = { version = "1", features = ["v4"] }
regex = "1.5"
encoding = "0.2.33"

rten = "0.10.0"
rten-imageio = "0.10.0"
rten-imageproc = "0.10.0"
rten-tensor = "0.10.0"
nalgebra = "0.33.0"

[profile.test]
inherits = "release"
